--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -1,13 +1,205 @@
 <!doctype html>
 <html lang="ko" class="dark">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Slice - Splice 샘플 브라우저</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    
+    <!-- Primary Meta Tags -->
+    <title>Slice - Minimal Splice Sample Browser</title>
+    <meta name="title" content="Slice - Minimal Splice Sample Browser" />
+    <meta name="description" content="A minimal local browser for your Splice library. Experience lightning-fast browsing, instant waveforms, and smart filtering. Available for macOS." />
+    <meta name="keywords" content="Splice, Sample Browser, Audio Samples, Local Manager, macOS App, Music Production, DAW, Free, Slice" />
+    <meta name="author" content="Slice" />
+    <meta name="theme-color" content="#050505" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://github.com/yourusername/slice" />
+    <meta property="og:title" content="Slice - Your samples, quietly organized." />
+    <meta property="og:description" content="A minimal local browser for your Splice library. No distractions, just your sound. Lightning fast, instant waveforms, local-first." />
+    <meta property="og:image" content="/app-screenshot.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://github.com/yourusername/slice" />
+    <meta property="twitter:title" content="Slice - Your samples, quietly organized." />
+    <meta property="twitter:description" content="A minimal local browser for your Splice library. No distractions, just your sound. Lightning fast, instant waveforms, local-first." />
+    <meta property="twitter:image" content="/app-screenshot.png" />
+
+    <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body class="bg-[#050505] text-[#ededed] selection:bg-white/20 selection:text-white font-sans antialiased">
+  <!-- 미세한 노이즈 텍스처 -->
+  <div class="fixed inset-0 z-0 pointer-events-none opacity-[0.03]"
+    style="background-image: url(&quot;data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E&quot;)">
+  </div>
+
+  <div class="relative z-10 max-w-[1400px] mx-auto px-6 md:px-8 py-12 flex flex-col">
+    <!-- 네비게이션 -->
+    <nav class="w-full flex justify-between items-center mb-20 fade-in-up" style="animation-delay: 0ms">
+      <div class="flex items-center">
+        <img src="/icon.png" alt="Slice" class="w-8 h-8" />
+      </div>
+      <a href="https://github.com/ljho01/slice" target="_blank" rel="noreferrer"
+        class="text-zinc-500 hover:text-zinc-200 transition-colors text-xs font-medium tracking-wide flex items-center gap-2">
+        GitHub
+        <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-3 h-3">
+          <path d="M5 12h14" />
+          <path d="m12 5 7 7-7 7" />
+        </svg>
+      </a>
+    </nav>
+
+    <!-- 히어로 섹션 -->
+    <div class="w-full space-y-8 mb-20 fade-in-up text-center flex flex-col items-center"
+      style="animation-delay: 100ms">
+      <div class="space-y-4">
+        <div
+          class="inline-flex items-center gap-2 px-2.5 py-1 rounded-full border border-white/5 bg-white/[0.02] text-[10px] font-medium text-zinc-400 uppercase tracking-widest">
+          <span class="w-1 h-1 rounded-full bg-emerald-500/80"></span>
+          v0.1.0 Beta
+        </div>
+
+        <h1 class="text-3xl md:text-5xl font-medium tracking-[-0.03em] leading-[1.1] text-white">
+          Your samples,<br />
+          <span class="text-zinc-600">quietly organized.</span>
+        </h1>
+
+        <p class="text-base md:text-lg text-zinc-400 max-w-lg mx-auto leading-relaxed font-normal tracking-tight">
+          A minimal local browser for your Splice library.<br />
+          No distractions, just your sound.
+        </p>
+      </div>
+
+      <div class="flex flex-col sm:flex-row items-center gap-4 pt-2">
+        <button onclick="window.open('https://github.com/ljho01/slice/releases/latest', '_blank')"
+          class="group flex items-center gap-2 px-5 py-2.5 text-sm font-medium rounded-lg bg-zinc-100 text-black hover:bg-white transition-all shadow-[0_0_20px_-5px_rgba(255,255,255,0.1)] cursor-pointer">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4">
+            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+            <polyline points="7 10 12 15 17 10" />
+            <line x1="12" x2="12" y1="15" y2="3" />
+          </svg>
+          Download for macOS
+        </button>
+        <div class="flex items-center gap-3 px-2 text-[11px] text-zinc-600 font-mono">
+          <span>macOS 11.0+</span>
+          <span class="w-px h-2.5 bg-zinc-800"></span>
+          <span>Apple Silicon Ready</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- 앱 스크린샷 -->
+    <div class="relative w-full mb-40 fade-in-up" style="animation-delay: 200ms">
+      <div
+        class="relative rounded-xl overflow-hidden border border-white/10 bg-[#0a0a0a] shadow-[0_0_100px_-20px_rgba(0,0,0,0.7)]">
+        <!-- 윈도우 컨트롤 -->
+        <div
+          class="absolute top-0 left-0 right-0 h-10 bg-[#0a0a0a] border-b border-white/5 flex items-center px-4 gap-2 z-20">
+          <div class="flex gap-1.5">
+            <div class="w-2.5 h-2.5 rounded-full bg-zinc-800"></div>
+            <div class="w-2.5 h-2.5 rounded-full bg-zinc-800"></div>
+            <div class="w-2.5 h-2.5 rounded-full bg-zinc-800"></div>
+          </div>
+        </div>
+        <img src="/app-screenshot.png" alt="Slice App Screenshot" class="w-full h-auto pt-10 opacity-100" />
+        <!-- 오버레이 그라데이션 -->
+        <div
+          class="absolute inset-x-0 bottom-0 h-40 bg-gradient-to-t from-[#050505] to-transparent opacity-30 pointer-events-none">
+        </div>
+      </div>
+    </div>
+
+    <!-- 기능 소개 -->
+    <div class="w-full mb-40 fade-in-up" style="animation-delay: 300ms">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-x-20 gap-y-16">
+        <div class="space-y-8">
+          <h2 class="text-2xl font-medium tracking-tight text-white">Essentials</h2>
+          <p class="text-zinc-500 text-sm leading-relaxed max-w-sm">
+            We focused on the absolute necessities for a sample browser. Speed, clarity, and accessibility.
+          </p>
+        </div>
+
+        <div class="space-y-12">
+          <div class="group">
+            <h3 class="text-sm font-medium text-zinc-200 mb-1.5 group-hover:text-white transition-colors">Lightning Fast
+            </h3>
+            <p class="text-sm text-zinc-500 leading-relaxed font-normal group-hover:text-zinc-400 transition-colors">
+              Virtual scrolling technology handles thousands of samples without a single frame drop.
+            </p>
+          </div>
+          <div class="group">
+            <h3 class="text-sm font-medium text-zinc-200 mb-1.5 group-hover:text-white transition-colors">Instant
+              Waveform</h3>
+            <p class="text-sm text-zinc-500 leading-relaxed font-normal group-hover:text-zinc-400 transition-colors">
+              Visual waveforms are generated instantly. See the sound before you hear it.
+            </p>
+          </div>
+          <div class="group">
+            <h3 class="text-sm font-medium text-zinc-200 mb-1.5 group-hover:text-white transition-colors">Local First
+            </h3>
+            <p class="text-sm text-zinc-500 leading-relaxed font-normal group-hover:text-zinc-400 transition-colors">
+              Your data stays on your machine. SQLite database ensures offline access and privacy.
+            </p>
+          </div>
+          <div class="group">
+            <h3 class="text-sm font-medium text-zinc-200 mb-1.5 group-hover:text-white transition-colors">Smart
+              Filtering</h3>
+            <p class="text-sm text-zinc-500 leading-relaxed font-normal group-hover:text-zinc-400 transition-colors">
+              Filter by BPM, Key, Tag, and Instrument with keyboard-centric navigation.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 단축키 섹션 -->
+    <div class="w-full mb-40 border-t border-white/5 pt-20 fade-in-up" style="animation-delay: 400ms">
+      <div class="flex flex-col md:flex-row justify-between items-start md:items-center gap-8">
+        <div>
+          <h3 class="text-lg font-medium text-white mb-2">Keyboard First</h3>
+          <p class="text-zinc-500 text-sm">Designed for workflow efficiency.</p>
+        </div>
+        <div class="grid grid-cols-2 gap-4 text-xs font-mono text-zinc-400">
+          <div class="flex items-center gap-3">
+            <span class="px-2 py-1 rounded bg-zinc-900 border border-white/10 text-zinc-300">Space</span>
+            <span>Play / Pause</span>
+          </div>
+          <div class="flex items-center gap-3">
+            <span class="px-2 py-1 rounded bg-zinc-900 border border-white/10 text-zinc-300">↓ / ↑</span>
+            <span>Navigate</span>
+          </div>
+          <div class="flex items-center gap-3">
+            <span class="px-2 py-1 rounded bg-zinc-900 border border-white/10 text-zinc-300">Cmd + F</span>
+            <span>Search</span>
+          </div>
+          <div class="flex items-center gap-3">
+            <span class="px-2 py-1 rounded bg-zinc-900 border border-white/10 text-zinc-300">Esc</span>
+            <span>Clear Filter</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 푸터 -->
+    <footer
+      class="w-full border-t border-white/5 pt-12 pb-24 flex flex-col md:flex-row justify-between items-start md:items-center gap-6 fade-in-up"
+      style="animation-delay: 500ms">
+      <div class="flex items-center gap-2 text-zinc-600 text-sm">
+        Slice
+      </div>
+      <div class="flex gap-6 text-xs text-zinc-600 font-medium">
+        <a href="#" class="hover:text-zinc-300 transition-colors">GitHub</a>
+        <a href="#" class="hover:text-zinc-300 transition-colors">Twitter</a>
+        <a href="mailto:contact@example.com" class="hover:text-zinc-300 transition-colors">Contact</a>
+      </div>
+    </footer>
+  </div>
+</body>
+
 </html>
