--- a/apps/landing/index.html
+++ b/apps/landing/index.html
@@ -76,8 +76,8 @@
       </div>
 
       <div class="flex flex-col sm:flex-row items-center gap-4 pt-2">
-        <button onclick="window.open('https://github.com/ljho01/slice/releases/latest', '_blank')"
-          class="group flex items-center gap-2 px-5 py-2.5 text-sm font-medium rounded-lg bg-zinc-100 text-black hover:bg-white transition-all shadow-[0_0_20px_-5px_rgba(255,255,255,0.1)] cursor-pointer">
+        <a href="https://github.com/ljho01/slice/releases/latest/download/Slice_0.1.0_aarch64.dmg"
+          class="group flex items-center gap-2 px-5 py-2.5 text-sm font-medium rounded-lg bg-zinc-100 text-black hover:bg-white transition-all shadow-[0_0_20px_-5px_rgba(255,255,255,0.1)] cursor-pointer no-underline">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4">
             <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
@@ -85,7 +85,7 @@
             <line x1="12" x2="12" y1="15" y2="3" />
           </svg>
           Download for macOS
-        </button>
+        </a>
         <div class="flex items-center gap-3 px-2 text-[11px] text-zinc-600 font-mono">
           <span>macOS 11.0+</span>
           <span class="w-px h-2.5 bg-zinc-800"></span>
